--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,9 @@ bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
+# free C-v for vim's v-block
+bind-key -T copy-mode-vi C-v
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
