--- a/.aliasesrc
+++ b/.aliasesrc
@@ -31,3 +31,4 @@ alias instal="bundle install"
 alias install="bundle install"
 
 alias redis="docker run --rm -d -p 6379:6379 redis"
+alias wx=wxrc
