a lot of new things

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,8 @@ set-option -sg escape-time 10
 setw -g aggressive-resize on
 
 # remaping C-b to C-a
-unbind C-b
-set -g prefix C-a
+# unbind C-b
+# set -g prefix C-a
 
 # bind a reload key
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
