--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set-option -g base-index 1
 set-option -sg focus-events off
 
 set -g status-interval 1
+set-option -g focus-events on
 
 # super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
