--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,10 +9,10 @@ include current-theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family JetBrainsMono Nerd Font
-bold_font JetBrainsMono Nerd Font, Bold
-italic_font JetBrainsMono Nerd Font, Italic
-bold_italic_font JetBrainsMono Nerd Font, Bold Italic
+font_family Cascadia Code PL
+bold_font Cascadia Code PL, Bold
+italic_font Cascadia Code PL, Italic
+bold_italic_font Cascadia Code PL, Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -27,7 +27,7 @@ bold_italic_font JetBrainsMono Nerd Font, Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -200,11 +200,11 @@ cursor_shape block
 #: the cursor shape to beam at shell prompts. You can avoid this by
 #: setting shell_integration to no-cursor.
 
-cursor_beam_thickness 1.5
+# cursor_beam_thickness 1.5
 
 #: Defines the thickness of the beam cursor (in pts)
 
-cursor_underline_thickness 2.0
+# cursor_underline_thickness 2.0
 
 #: Defines the thickness of the underline cursor (in pts)
 
@@ -795,7 +795,7 @@ tab_bar_margin_height 0.0 0.0
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -818,6 +818,7 @@ tab_bar_style fade
 #:     mapping for the https://sw.kovidgoyal.net/kitty/actions/#select-tab
 #:     action which presents you with a list of tabs and allows for easy
 #:     switching to a tab.
+tab_powerline_style round
 
 tab_bar_align left
 
@@ -908,9 +909,8 @@ tab_bar_margin_color none
 #: }}}
 
 #: Color scheme {{{
-
-foreground #dddddd
-background #000000
+# foreground #dddddd
+# background #000000
 
 #: The foreground and background colors
 
@@ -970,8 +970,8 @@ dim_opacity 0.75
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #000000
-selection_background #fffacd
+# selection_foreground #000000
+# selection_background #fffacd
 
 #: The foreground and background colors for text selected with the
 #: mouse. Setting both of these to none will cause a "reverse video"
@@ -987,67 +987,67 @@ selection_background #fffacd
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
-color0 #000000
-color8 #767676
+#color0 #000000
+#color8 #767676
 
-#: black
+##: black
 
-color1 #cc0403
-color9 #f2201f
+#color1 #cc0403
+#color9 #f2201f
 
-#: red
+##: red
 
-color2  #19cb00
-color10 #23fd00
+#color2  #19cb00
+#color10 #23fd00
 
-#: green
+##: green
 
-color3  #cecb00
-color11 #fffd00
+#color3  #cecb00
+#color11 #fffd00
 
-#: yellow
+##: yellow
 
-color4  #0d73cc
-color12 #1a8fff
+#color4  #0d73cc
+#color12 #1a8fff
 
-#: blue
+##: blue
 
-color5  #cb1ed1
-color13 #fd28ff
+#color5  #cb1ed1
+#color13 #fd28ff
 
-#: magenta
+##: magenta
 
-color6  #0dcdcd
-color14 #14ffff
+#color6  #0dcdcd
+#color14 #14ffff
 
-#: cyan
+##: cyan
 
-color7  #dddddd
-color15 #ffffff
+#color7  #dddddd
+#color15 #ffffff
 
-#: white
+##: white
 
-mark1_foreground black
+#mark1_foreground black
 
-#: Color for marks of type 1
+##: Color for marks of type 1
 
-mark1_background #98d3cb
+#mark1_background #98d3cb
 
-#: Color for marks of type 1 (light steel blue)
+##: Color for marks of type 1 (light steel blue)
 
-mark2_foreground black
+#mark2_foreground black
 
-#: Color for marks of type 2
+##: Color for marks of type 2
 
-mark2_background #f2dcd3
+#mark2_background #f2dcd3
 
-#: Color for marks of type 1 (beige)
+##: Color for marks of type 1 (beige)
 
-mark3_foreground black
+#mark3_foreground black
 
-#: Color for marks of type 3
+##: Color for marks of type 3
 
-mark3_background #f274bc
+#mark3_background #f274bc
 
 #: Color for marks of type 3 (violet)
 
@@ -1057,7 +1057,7 @@ mark3_background #f274bc
 
 #: Advanced {{{
 
-shell .
+shell /usr/bin/zsh
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -1065,7 +1065,7 @@ shell .
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor .
+editor nvim
 
 #: The terminal editor (such as ``vim`` or ``nano``) to use when
 #: editing the kitty config file or similar tasks.
@@ -1212,7 +1212,7 @@ allow_hyperlinks yes
 #: </kittens/hints>. The special value of ``ask`` means that kitty
 #: will ask before opening the link when clicked.
 
-shell_integration enabled
+shell_integration no-cursor
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
@@ -1427,6 +1427,13 @@ kitten_alias
 #: the aliased kitten to be substituted. So the example above will
 #: cause all invocations of the hints kitten to have the --hints-
 #: offset=0 option applied.
+
+#: Navigation {{{
+map ctrl+up neighboring_window top
+map ctrl+right neighboring_window right
+map ctrl+left neighboring_window left
+map ctrl+down neighboring_window bottom
+#: }}}
 
 #: Clipboard {{{
 
@@ -1693,24 +1700,24 @@ map kitty_mod+f8 swap_with_window
 
 #: Next tab
 
-map kitty_mod+right next_tab
+map alt+l next_tab
 map shift+cmd+]     next_tab
 map ctrl+tab        next_tab
 
 #: Previous tab
 
-map kitty_mod+left previous_tab
+map alt+h previous_tab
 map shift+cmd+[    previous_tab
 map ctrl+shift+tab previous_tab
 
 #: New tab
 
-map kitty_mod+t new_tab
+map alt+t new_tab
 map cmd+t       new_tab
 
 #: Close tab
 
-map kitty_mod+q close_tab
+map alt+q close_tab
 map cmd+w       close_tab
 
 #: Close OS window
@@ -1719,15 +1726,15 @@ map shift+cmd+w close_os_window
 
 #: Move tab forward
 
-map kitty_mod+. move_tab_forward
+map alt+. move_tab_forward
 
 #: Move tab backward
 
-map kitty_mod+, move_tab_backward
+map alt+, move_tab_backward
 
 #: Set tab title
 
-map kitty_mod+alt+t set_tab_title
+map alt+; set_tab_title
 map shift+cmd+i     set_tab_title
 
 
